--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
     testImplementation group: 'io.mockk', name: 'mockk', version: '1.10.0'
+
+    // guice
+    implementation group: 'com.google.inject', name: 'guice', version: '4.2.3'
 }
 
 mainClassName = "Main"
